@@ -12,6 +12,8 @@ return {
 		"mod_cloud_notify";
 		-- mod_muc has built-in vcard support
 		"muc_vcard";
+		-- mod_http_altconnect bundled
+		"http_altconnect";
 		-- Roles, module.may and per-session authz
 		"permissions";
 		-- prosody.* namespace
